--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,6 +66,10 @@
       font-size: 18px;
     }
   }
+  .h5{
+    font-family: "NotoSansThaiUI";
+    font-size: 36px;
+  }
   .p1 {
     font-family: "NotoSansThaiUI";
     font-size: 18px;
