--- a/styles/Dashboard.css
+++ b/styles/Dashboard.css
@@ -15,5 +15,6 @@
   .card_cat_detail {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
     border-radius: 6px;
+    height: fit-content;
   }
 }
