--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,7 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+    overflow: hidden;
   }
   @font-face {
     font-family: "NotoSansThaiUI";
