Use image component instead of img tag

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,6 +87,7 @@
   html {
     scroll-behavior: smooth;
     overflow: hidden;
+    outline: none;
   }
   @font-face {
     font-family: "NotoSansThaiUI";
