--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,95 +4,95 @@
 
 @layer utilities {
   * {
-    font-family: "NotoSansThaiUI" !important;
+    font-family: "NotoSansThaiUI";
   }
   html {
-    scroll-behavior: smooth !important;
-    overflow: hidden !important;
-    outline: none !important;
+    scroll-behavior: smooth;
+    overflow: hidden;
+    outline: none;
   }
   h1,
   h2,
   h3,
   h4,
   h5 {
-    font-weight: 700 !important;
+    font-weight: 700;
   }
-  /* h1 {
-    font-size: 80px !important;
-    font-weight: 700 !important;
+  .h1 {
+    font-size: 80px;
+    font-weight: 700;
     @media screen and (max-width: 767px) {
-      font-size: 48px !important;
+      font-size: 48px;
     }
   }
-  h2 {
-    font-size: 42px !important;
-    font-weight: 700 !important;
+  .h2 {
+    font-size: 42px;
+    font-weight: 700;
     @media screen and (max-width: 767px) {
-      font-size: 28px !important;
+      font-size: 28px;
     }
   }
-  h3 {
-    font-size: 24px !important;
-    font-weight: 700 !important;
+  .h3 {
+    font-size: 24px;
+    font-weight: 700;
     @media screen and (max-width: 767px) {
-      font-size: 22px !important;
+      font-size: 22px;
     }
   }
-  h4 {
-    font-size: 20px !important;
-    font-weight: 700 !important;
+  .h4 {
+    font-size: 20px;
+    font-weight: 700;
     @media screen and (max-width: 767px) {
-      font-size: 18px !important;
+      font-size: 18px;
     }
   }
-  h5 {
-    font-weight: 700 !important;
-    font-size: 36px !important;
-  } */
+  .h5 {
+    font-weight: 700;
+    font-size: 36px;
+  }
   .d1 {
-    font-family: "TheMATTER" !important;
-    font-size: 80px !important;
+    font-family: "TheMATTER";
+    font-size: 80px;
     @media screen and (max-width: 767px) {
-      font-size: 48px !important;
+      font-size: 48px;
     }
   }
   .d2 {
-    font-family: "TheMATTER" !important;
-    font-size: 60px !important;
+    font-family: "TheMATTER";
+    font-size: 60px;
     @media screen and (max-width: 767px) {
-      font-size: 36px !important;
+      font-size: 36px;
     }
   }
   .d3 {
-    font-family: "TheMATTER" !important;
-    font-size: 40px !important;
+    font-family: "TheMATTER";
+    font-size: 40px;
     @media screen and (max-width: 767px) {
-      font-size: 28px !important;
+      font-size: 28px;
     }
   }
   .d4 {
-    font-family: "TheMATTER" !important;
-    font-size: 30px !important;
+    font-family: "TheMATTER";
+    font-size: 30px;
     @media screen and (max-width: 767px) {
-      font-size: 24px !important;
+      font-size: 24px;
     }
   }
   .d5 {
-    font-family: "TheMATTER" !important;
-    font-size: 24px !important;
+    font-family: "TheMATTER";
+    font-size: 24px;
     @media screen and (max-width: 767px) {
-      font-size: 18px !important;
+      font-size: 18px;
     }
   }
   .p1 {
-    font-size: 18px !important;
+    font-size: 18px;
   }
   .p2 {
-    font-size: 14px !important;
+    font-size: 14px;
   }
   .p3 {
-    font-size: 12px !important;
+    font-size: 12px;
   }
 }
 @layer base {
@@ -117,16 +117,16 @@
 }
 
 .fade-enter {
-  opacity: 0 !important;
+  opacity: 0;
 }
 .fade-enter-active {
-  opacity: 1 !important;
-  transition: opacity 0.4s !important;
+  opacity: 1;
+  transition: opacity 0.4s;
 }
 .fade-exit {
-  opacity: 1 !important;
+  opacity: 1;
 }
 .fade-exit-active {
-  opacity: 0 !important;
-  transition: opacity 0.4s !important;
+  opacity: 0;
+  transition: opacity 0.4s;
 }
