--- a/styles/Dashboard.css
+++ b/styles/Dashboard.css
@@ -186,4 +186,12 @@
     background: white;
     padding: 5px 12px;
   }
+  .isRank {
+    background: #ffffff;
+    box-shadow: 0px 16px 48px rgba(0, 0, 0, 0.176);
+    border-radius: 6px;
+    cursor: pointer;
+    width: 235px;
+    height: 37px;
+  }
 }
