--- a/styles/home.scss
+++ b/styles/home.scss
@@ -11,8 +11,34 @@
     }
   }
   .box:hover {
+    background: rgba(255, 255, 255, 0.9) !important;
     .tooltip {
       display: block;
     }
+  }
+}
+
+.budget-page-four {
+  .legends {
+    li:hover {
+      background: rgba(255, 255, 255, 0.9) !important;
+    }
+  }
+  .box {
+    .value {
+      display: none;
+    }
+  }
+  .box.is-hover {
+    background: rgba(255, 255, 255, 0.9) !important;
+    .value {
+      display: block;
+    }
+  }
+}
+
+.responsibility-page-three {
+  .scroll-list {
+    scroll-behavior: smooth;
   }
 }
