Add style dashboard bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   * {
-    font-family: "NotoSansThaiUI";
+    font-family: 'NotoSansThaiUI';
   }
   html {
     scroll-behavior: smooth;
@@ -20,6 +20,9 @@
   h4,
   h5 {
     font-weight: 700 !important;
+  }
+  .bg-white-default {
+    background: white;
   }
   .h1 {
     font-size: 80px;
@@ -54,42 +57,42 @@
     font-size: 36px;
   }
   .d1 {
-    font-family: "TheMATTER";
+    font-family: 'TheMATTER';
     font-size: 80px;
     @media screen and (max-width: 767px) {
       font-size: 48px;
     }
   }
   .d2 {
-    font-family: "TheMATTER";
+    font-family: 'TheMATTER';
     font-size: 60px;
     @media screen and (max-width: 767px) {
       font-size: 36px;
     }
   }
   .d3 {
-    font-family: "TheMATTER";
+    font-family: 'TheMATTER';
     font-size: 40px;
     @media screen and (max-width: 767px) {
       font-size: 28px;
     }
   }
   .d4 {
-    font-family: "TheMATTER";
+    font-family: 'TheMATTER';
     font-size: 30px;
     @media screen and (max-width: 767px) {
       font-size: 24px;
     }
   }
   .d5 {
-    font-family: "TheMATTER";
+    font-family: 'TheMATTER';
     font-size: 24px;
     @media screen and (max-width: 767px) {
       font-size: 18px;
     }
   }
   .h5 {
-    font-family: "NotoSansThaiUI";
+    font-family: 'NotoSansThaiUI';
     font-size: 36px;
   }
   .p1 {
@@ -109,20 +112,20 @@
     outline: none;
   }
   @font-face {
-    font-family: "NotoSansThaiUI";
-    src: url("assets/fonts/NotoSansThaiUI-Bold.ttf");
+    font-family: 'NotoSansThaiUI';
+    src: url('assets/fonts/NotoSansThaiUI-Bold.ttf');
     font-weight: 700;
     font-style: normal;
   }
   @font-face {
-    font-family: "NotoSansThaiUI";
-    src: url("assets/fonts/NotoSansThaiUI-Regular.ttf");
+    font-family: 'NotoSansThaiUI';
+    src: url('assets/fonts/NotoSansThaiUI-Regular.ttf');
     font-weight: 400;
     font-style: normal;
   }
   @font-face {
-    font-family: "TheMATTER";
-    src: url("assets/fonts/TheMATTER-Bold.otf");
+    font-family: 'TheMATTER';
+    src: url('assets/fonts/TheMATTER-Bold.otf');
     font-weight: 700;
     font-style: normal;
   }
