Add barChart hover

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -1,4 +1,3 @@
-
 .card_cat_intro {
   width: 479px;
   height: 240px;
@@ -23,7 +22,6 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-/* Hide the browser's default checkbox */
 .check input {
   position: absolute;
   opacity: 0;
@@ -32,7 +30,6 @@
   width: 0;
 }
 
-/* Create a custom checkbox */
 .checkmark {
   position: absolute;
   top: 50%;
@@ -44,29 +41,20 @@
   border-radius: 50%;
 }
 
-/* On mouse-over, add a grey background color */
-/* .check:hover input ~ .checkmark {
-    background-color: #ccc;
-  } */
-
-/* When the checkbox is checked, add a blue background */
 .check input:checked ~ .checkmark {
   background-color: #000000;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
   content: '';
   position: absolute;
   display: none;
 }
 
-/* Show the checkmark when checked */
 .check input:checked ~ .checkmark:after {
   display: block;
 }
 
-/* Style the checkmark/indicator */
 .check .checkmark:after {
   left: 4px;
   top: 0px;
@@ -80,7 +68,6 @@
 }
 
 .timeline {
-  /* counter-reset: test 20; */
   position: relative;
 }
 
@@ -92,10 +79,6 @@
   text-align: center;
   text-transform: uppercase;
 }
-
-/* ul:nth-child(1) {
-    color: #4caf50;
-  } */
 
 .timeline li:before {
   content: '';
@@ -109,7 +92,7 @@
   margin: 0 auto 10px auto;
   background: black;
   color: #000;
-  /* transition: all ease-in-out 0.3s; */
+
   cursor: pointer;
   z-index: 10;
   position: relative;
@@ -124,7 +107,6 @@
   top: 5px;
   left: -50%;
   z-index: 1;
-  /* transition: all ease-in-out 0.3s; */
 }
 
 .timeline li:first-child:after {
@@ -140,7 +122,6 @@
 .text-selected {
   color: black;
   background: white;
-  /* transition: all ease-in-out 0.3s; */
 }
 .text {
   border: 1px solid #ffffff;
@@ -150,15 +131,6 @@
   margin: auto;
   cursor: pointer;
 }
-/* .timeline-li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
-
-/* .timeline li.active-tl + li:after {
-    background: #4caf50;
-  } */
 
 .tool_tip_detail_wrapper {
   width: 183px;
@@ -239,4 +211,6 @@
   background-image: url('../assets/images/air_bg_hover.jpg');
   background-size: cover;
 }
-
+#tooltip-budget{
+  visibility: hidden;
+}
