--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   * {
-    font-family: 'NotoSansThaiUI';
+    font-family: "NotoSansThaiUI";
   }
   html {
     scroll-behavior: smooth;
@@ -57,42 +57,42 @@
     font-size: 36px;
   }
   .d1 {
-    font-family: 'TheMATTER';
+    font-family: "TheMATTER";
     font-size: 80px;
     @media screen and (max-width: 767px) {
       font-size: 48px;
     }
   }
   .d2 {
-    font-family: 'TheMATTER';
+    font-family: "TheMATTER";
     font-size: 60px;
     @media screen and (max-width: 767px) {
       font-size: 36px;
     }
   }
   .d3 {
-    font-family: 'TheMATTER';
+    font-family: "TheMATTER";
     font-size: 40px;
     @media screen and (max-width: 767px) {
       font-size: 28px;
     }
   }
   .d4 {
-    font-family: 'TheMATTER';
+    font-family: "TheMATTER";
     font-size: 30px;
     @media screen and (max-width: 767px) {
       font-size: 24px;
     }
   }
   .d5 {
-    font-family: 'TheMATTER';
+    font-family: "TheMATTER";
     font-size: 24px;
     @media screen and (max-width: 767px) {
       font-size: 18px;
     }
   }
   .h5 {
-    font-family: 'NotoSansThaiUI';
+    font-family: "NotoSansThaiUI";
     font-size: 36px;
   }
   .p1 {
@@ -112,20 +112,20 @@
     outline: none;
   }
   @font-face {
-    font-family: 'NotoSansThaiUI';
-    src: url('assets/fonts/NotoSansThaiUI-Bold.ttf');
+    font-family: "NotoSansThaiUI";
+    src: url("assets/fonts/NotoSansThaiUI-Bold.ttf");
     font-weight: 700;
     font-style: normal;
   }
   @font-face {
-    font-family: 'NotoSansThaiUI';
-    src: url('assets/fonts/NotoSansThaiUI-Regular.ttf');
+    font-family: "NotoSansThaiUI";
+    src: url("assets/fonts/NotoSansThaiUI-Regular.ttf");
     font-weight: 400;
     font-style: normal;
   }
   @font-face {
-    font-family: 'TheMATTER';
-    src: url('assets/fonts/TheMATTER-Bold.otf');
+    font-family: "TheMATTER";
+    src: url("assets/fonts/TheMATTER-Bold.otf");
     font-weight: 700;
     font-style: normal;
   }
@@ -144,4 +144,19 @@
 .fade-exit-active {
   opacity: 0;
   transition: opacity 0.4s;
+}
+
+.slide-enter {
+  right: -976px;
+}
+.slide-enter-active {
+  right: 0;
+  transition: 0.4s;
+}
+.slide-exit {
+  right: 0;
+}
+.slide-exit-active {
+  right: -976px;
+  transition: 0.4s;
 }
