--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,16 @@ html {
 body {
   background: black;
 }
+.container {
+  @media screen and (max-width: 1440px) {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  @media screen and (max-width: 767px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 h1,
 h2,
 h3,
