--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -168,6 +168,7 @@
   border-radius: 50%;
   border-color: black;
   display: flex;
+  align-items: center;
   justify-content: center;
   border: 1px solid #000000;
 }
@@ -211,6 +212,6 @@
   background-image: url('../assets/images/air_bg_hover.jpg');
   background-size: cover;
 }
-#tooltip-budget{
+#tooltip-budget {
   visibility: hidden;
 }
