--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -138,6 +138,9 @@
   position: absolute;
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 767px) {
+    width: 143px;
+  }
 }
 .tooltip_header {
   width: 100%;
@@ -161,6 +164,14 @@
   cursor: pointer;
   width: 235px;
   height: 37px;
+}
+.isRank_black {
+  background: black;
+  box-shadow: 0px 16px 48px rgba(0, 0, 0, 0.176);
+  border-radius: 6px;
+  cursor: pointer;
+  height: 37px;
+  border: 1px solid #ffffff;
 }
 .circle_wrapper {
   width: 28px;
