--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  font-family: "NotoSansThaiUI";
+  font-family: 'NotoSansThaiUI';
 }
 html {
   scroll-behavior: smooth;
@@ -32,7 +32,7 @@ h5 {
 }
 
 .d1 {
-  font-family: "TheMATTER";
+  font-family: 'TheMATTER';
   font-size: 80px;
   line-height: 110%;
   @media screen and (max-width: 1440px) {
@@ -43,7 +43,7 @@ h5 {
   }
 }
 .d2 {
-  font-family: "TheMATTER";
+  font-family: 'TheMATTER';
   font-size: 60px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -54,7 +54,7 @@ h5 {
   }
 }
 .d3 {
-  font-family: "TheMATTER";
+  font-family: 'TheMATTER';
   font-size: 40px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -65,7 +65,7 @@ h5 {
   }
 }
 .d4 {
-  font-family: "TheMATTER";
+  font-family: 'TheMATTER';
   font-size: 30px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -76,7 +76,7 @@ h5 {
   }
 }
 .d5 {
-  font-family: "TheMATTER";
+  font-family: 'TheMATTER';
   font-size: 24px;
   line-height: 130%;
   @media screen and (max-width: 1440px) {
@@ -107,22 +107,31 @@ h5 {
   font-size: 24px;
   line-height: 130%;
   font-weight: 700;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1024px) {
     font-size: 22px;
+  }
+  @media screen and (max-width: 767px) {
+    font-size: 20px;
   }
 }
 .h4 {
   font-size: 20px;
   line-height: 130%;
   font-weight: 700;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1024px) {
     font-size: 18px;
+  }
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
   }
 }
 
 .p1 {
   font-size: 18px;
   line-height: 110%;
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 .p1-bold {
   font-size: 18px;
@@ -132,6 +141,9 @@ h5 {
 .p2 {
   font-size: 14px;
   line-height: 120%;
+  @media screen and (max-width: 767px) {
+    font-size: 12px;
+  }
 }
 .p3 {
   font-size: 12px;
