--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -6,6 +6,13 @@
   align-items: center;
   padding-left: 39px;
   cursor: pointer;
+  @media screen and (max-width: 1023px) {
+    height: 100px;
+  }
+  @media screen and (max-width: 767px) {
+    height: 60px;
+    width: 100%;
+  }
 }
 .card_cat_detail,
 .card_cat_ranking {
