Adjust main page mobile layout

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  font-family: 'NotoSansThaiUI';
+  font-family: "NotoSansThaiUI";
 }
 html {
   scroll-behavior: smooth;
@@ -32,7 +32,7 @@ h5 {
 }
 
 .d1 {
-  font-family: 'TheMATTER';
+  font-family: "TheMATTER";
   font-size: 80px;
   line-height: 110%;
   @media screen and (max-width: 1440px) {
@@ -43,7 +43,7 @@ h5 {
   }
 }
 .d2 {
-  font-family: 'TheMATTER';
+  font-family: "TheMATTER";
   font-size: 60px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -54,7 +54,7 @@ h5 {
   }
 }
 .d3 {
-  font-family: 'TheMATTER';
+  font-family: "TheMATTER";
   font-size: 40px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -68,7 +68,7 @@ h5 {
   }
 }
 .d4 {
-  font-family: 'TheMATTER';
+  font-family: "TheMATTER";
   font-size: 30px;
   line-height: 120%;
   @media screen and (max-width: 1440px) {
@@ -82,7 +82,7 @@ h5 {
   }
 }
 .d5 {
-  font-family: 'TheMATTER';
+  font-family: "TheMATTER";
   font-size: 24px;
   line-height: 130%;
   @media screen and (max-width: 1440px) {
