--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -1,10 +1,9 @@
 .card_cat_intro {
   width: 479px;
   height: 240px;
-  margin: 10px 0;
   display: flex;
   align-items: center;
-  padding-left: 39px;
+  // padding-left: 39px;
   cursor: pointer;
   @media screen and (max-width: 1023px) {
     height: 100px;
@@ -53,7 +52,7 @@
 }
 
 .checkmark:after {
-  content: '';
+  content: "";
   position: absolute;
   display: none;
 }
@@ -88,7 +87,7 @@
 }
 
 .timeline li:before {
-  content: '';
+  content: "";
   width: 10px;
   height: 10px;
   border: 1px solid #ffffff;
@@ -106,7 +105,7 @@
 }
 
 .timeline li:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 1px;
@@ -195,46 +194,45 @@
   border: 1px solid #000000;
 }
 #cardน้ำท่วมถนน {
-  background-image: url('../assets/images/flood_bg.png');
+  background-image: url("../assets/images/flood_bg.png");
   background-size: cover;
 }
 #cardพื้นที่สีเขียว {
-  background-image: url('../assets/images/park_bg.png');
+  background-image: url("../assets/images/park_bg.png");
   background-size: cover;
 }
 #cardมลพิษในคลอง {
-  background-image: url('../assets/images/water_bg.png');
+  background-image: url("../assets/images/water_bg.png");
   background-size: cover;
 }
 #cardขยะมูลฝอย {
-  background-image: url('../assets/images/waste_bg.png');
+  background-image: url("../assets/images/waste_bg.png");
   background-size: cover;
 }
 #cardฝุ่นควันเกินมาตรฐาน {
-  background-image: url('../assets/images/air_bg.png');
+  background-image: url("../assets/images/air_bg.png");
   background-size: cover;
 }
 #cardน้ำท่วมถนน:hover {
-  background-image: url('../assets/images/flood_bg_hover.jpg');
+  background-image: url("../assets/images/flood_bg_hover.jpg");
   background-size: cover;
 }
 #cardพื้นที่สีเขียว:hover {
-  background-image: url('../assets/images/park_bg_hover.jpg');
+  background-image: url("../assets/images/park_bg_hover.jpg");
   background-size: cover;
 }
 #cardมลพิษในคลอง:hover {
-  background-image: url('../assets/images/water_bg_hover.jpg');
+  background-image: url("../assets/images/water_bg_hover.jpg");
   background-size: cover;
 }
 #cardขยะมูลฝอย:hover {
-  background-image: url('../assets/images/waste_bg_hover.jpg');
+  background-image: url("../assets/images/waste_bg_hover.jpg");
   background-size: cover;
 }
 #cardฝุ่นควันเกินมาตรฐาน:hover {
-  background-image: url('../assets/images/air_bg_hover.jpg');
+  background-image: url("../assets/images/air_bg_hover.jpg");
   background-size: cover;
 }
 #tooltip-budget {
   visibility: hidden;
 }
-
