Adjust main page ipad layout

--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -1,5 +1,5 @@
 .card_cat_intro {
-  width: 479px;
+  width: 480px;
   height: 240px;
   display: flex;
   align-items: center;
@@ -7,6 +7,7 @@
   cursor: pointer;
   @media screen and (max-width: 1023px) {
     height: 100px;
+    width: 100%;
   }
   @media screen and (max-width: 767px) {
     height: 60px;
